      (GH Issue #3699).
    - MSVC updates: An MSVC 6.0 installation now appears in the installed versions list
      when msvc debug output is enabled (GH Issue #3699).
    - MSVS test updates: Tests for building a program using generated MSVS project and
      solution files using MSVS 2015 and later now work as expected on x86 hosts.
 
  From William Deegan:
    - Fix broken clang + MSVC 2019 combination by using MSVC configuration logic to
      propagate'VCINSTALLDIR' and 'VCToolsInstallDir' which clang tools use to locate
      header files and libraries from MSVC install. (Fixes GH Issue #3480)
    - Added C:\msys64\mingw64\bin to default mingw and clang windows PATH's.  This
      is a reasonable default and also aligns with changes in Appveyor's VS2019 image.
    - Drop support for Python 2.7. SCons will be Python 3.5+ going forward.
    - Change SCons.Node.ValueWithMemo to consider any name passed when memoizing Value() nodes
    - Fix Github Issue #3550 - When using Substfile() with a value like Z:\mongo\build\install\bin
      the implementation using re.sub() would end up interpreting the string and finding regex escape
      characters where it should have been simply replacing existing text. Switched to use string.replace().
    - Fix Github Issue #2904 - Provide useful error message when more than one Configure Contexts are opened.
      Only one open is allowed. You must call conf.Finish() to complete the currently open one before creating another
    - Add msys2 installed mingw default path to PATH for mingw tool.
      - C:\msys64\mingw64\bin
    - Purge obsolete internal build and tooling scripts
    - Allow user specified location for vswhere.exe specified by VSWHERE. 
      NOTE: This must be set at the time the 'msvc' 'msvs' and/or 'mslink' tool(s) are initialized to have any effect.
    - Resolve Issue #3451 and Issue #3450 - Rewrite SCons setup.py and packaging. Move script logic to entry points so 